kubernetes/apps/talos1018/home-automation/home-assistant/app/ha/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Smart Home
    gethomepage.dev/icon: home-assistant.svg
    gethomepage.dev/name: Home Assistant
    gethomepage.dev/app: home-assistant
spec:
  parentRefs:
    - name: main-gateway
      namespace: network
  hostnames:
    - "hass.${CLUSTER_DOMAIN}"
    - "hass.${DOMAIN}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: home-assistant
          port: 8123
